# pz-obs-overlay

./: README.md  align_sprites.py  event_daemon.py  image_processor.py  image_prompt.txt  package-lock.json  package.json  pyproject.toml  requirements.txt
media/lua/client/: ZomboidEventMod.lua
overlay/: README.md  convert.py  index.html  json.txt  package-lock.json  package.json  spriteData.js  style.css  tailwind.config.js
overlay/assets/UI/: UI.xml
overlay/scripts/: TalkingHeadManager.js  hud.js
overlay/src/: App.tsx  index.css
overlay/src/components/: CoordsBox.tsx  EnvironmentBadge.tsx  PlayerHUD.tsx  PlayerStats.tsx  VitalsPanel.tsx  WeaponEvent.tsx  XPGain.tsx
overlay/src/context/: StatsContext.tsx
overlay/src/hooks/: useThrottledValue.ts  useWebSocket.ts  useWebSocket.tsx
scripts/: extract_textures.py
